funcmap_tests/tests/ui/opts/duplicate_crate_arg_different_attrs.stderr
error: duplicate crate path
 --> tests/ui/opts/duplicate_crate_arg_different_attrs.rs:5:19
  |
5 | #[funcmap(crate = "fake_funcmap_2")]
  |                   ^^^^^^^^^^^^^^^^
